--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ ul, ol, li {
     /* Colors */
     --body-bg-main-color: #ececec;
     --item-bg-main-color: #d3d3d3;
+    --item-bg-main-color-blur: #d3d3d396;
     --item-bg-secondary-color: #151515;
     --headers-main-color: #131313;
     --text-main-color: #2b2b2b;
@@ -92,8 +93,8 @@ body {
     text-align: center;
 }
 
-.active {
-    display: block;
+.alert-inactive {
+    display: none;
 }
 
 .red-text {
@@ -202,6 +203,14 @@ body {
 
 .close-btn p {
     display: none;
+}
+
+.close-modal-btn {
+    background-color: var(--body-bg-main-color);
+}
+
+.close-modal-btn:hover {
+    background-color: #cfcfcf;
 }
 
 .show-cart {
@@ -525,6 +534,52 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 2.4rem;
 }
 
+/* Modal */
+
+.modal-inactive {
+    display: none;
+}
+
+.modal-item-container {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--item-bg-main-color-blur);
+}
+
+.modal-item {
+    border-radius: .5rem;
+    width: 70%;
+    height: fit-content;
+    margin: 100% auto;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--success-btn-bg-color);
+    padding: 2rem;
+}
+
+.modal-header {
+    text-align: center;
+    margin: 0 auto 2rem;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-body-text {
+    margin: 0 auto 2rem;
+}
+
+.modal-body-text p {
+    font-size: 1.9rem;
+}
+
 /* Website footer */
 
 .website-footer {
@@ -593,7 +648,6 @@ input[type=number]::-webkit-outer-spin-button {
     border-radius: .3rem;
     box-shadow: var(--box-shadow-1);
     padding: 1.5rem;
-    display: none;
 }
 
 .alert-popup h4 {
@@ -728,7 +782,7 @@ input[type=number]::-webkit-outer-spin-button {
         height: fit-content;
         margin: 0 auto 3rem;
         padding: 15rem 2rem 10rem;
-        background-color: var(--item-bg-main-color);
+        background-color: var(--body-bg-main-color);
     }
 
     .products-container {
@@ -747,9 +801,18 @@ input[type=number]::-webkit-outer-spin-button {
         padding: 1rem;
     }
 
+    .products-item:hover {
+        background-color: var(--item-bg-main-color);
+        transition: all .5s;
+    }
+
+    .product-item-title {
+        min-height: 5rem;
+    }
+
     .product-image {
-        width: 275px;
-        height: 225px;
+        width: 225px;
+        height: 200px;
         margin: 1rem auto;
     }
 
@@ -766,9 +829,9 @@ input[type=number]::-webkit-outer-spin-button {
     }
 
     .shopping-cart-quantity-input {
-        width: 30%;
+        width: 50%;
         border-radius: .3rem;
-        padding: .2rem 1rem;
+        padding: .7rem 1rem;
         border: none;
         text-align: center;
         background-color: var(--body-bg-main-color);
